force-app/main/default/objects/Geodata_Layer__c/Geodata_Layer__c.object-meta.xml
<CustomObject>
    <description>Describes a Geodata configuration that can be used for defining Territories in the Territory Editor.</description>
    <label>Geodata Layer</label>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geodata Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>