force-app/main/default/objects/Geodata_Layer__c/fields/CityCode__c.field-meta.xml
<CustomField>
    <fullName>CityCode__c</fullName>
    <description>Defines the City Code for this Geo data layer, being either a literal value (e.g. London) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {City})</description>
    <inlineHelpText>Defines the City Code for this Geo data layer, being either a literal value (e.g. London) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {City})</inlineHelpText>
    <label>CityCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>