force-app/main/default/objects/Geodata_Layer__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>Defines the Country Code for this Geo data layer, being either a literal value (e.g. USA) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {ISO_A3})</description>
    <inlineHelpText>Defines the Country Code for this Geo data layer, being either a literal value (e.g. USA) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {ISO_A3})</inlineHelpText>
    <label>CountryCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>