force-app/main/default/objects/Geodata_Layer__c/fields/GeoJson_File_Url__c.field-meta.xml
<CustomField>
    <fullName>GeoJson_File_Url__c</fullName>
    <description>The URL used to load the GeoJson file that describes with Geodata layer.  Must be a publicly accessible URL that allows cross domain loading.</description>
    <inlineHelpText>The URL used to load the GeoJson file that describes with Geodata layer.  Must be a publicly accessible URL that allows cross domain loading.</inlineHelpText>
    <label>GeoJson File URL</label>
    <type>Url</type>
</CustomField>