force-app/main/default/objects/Geodata_Layer__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Defines the Postal Code for this Geo data layer, being either a literal value (e.g. NW1 1AA) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {postalCode})</description>
    <inlineHelpText>Defines the Postal Code for this Geo data layer, being either a literal value (e.g. NW1 1AA) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {postalCode})</inlineHelpText>
    <label>PostalCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>