force-app/main/default/objects/Geodata_Layer__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <description>Defines the State Code for this Geo data layer, being either a literal value (e.g. CA) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {postal})</description>
    <inlineHelpText>Defines the State Code for this Geo data layer, being either a literal value (e.g. CA) or the name of a field in the GeoJson file&apos;s feature properties (e.g. {postal})</inlineHelpText>
    <label>StateCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>