force-app/main/default/objects/Geodata_Layer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GeoJson_File_Url__c</columns>
    <columns>CountryCode__c</columns>
    <columns>StateCode__c</columns>
    <columns>CityCode__c</columns>
    <columns>PostalCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>